--- a/index.html
+++ b/index.html
@@ -28,5 +28,5 @@
     <input type="file" id="files" name="file" />
   </body>
 
-  <script src="bundle.js"></script>
+  <script src="gb-ES6.js"></script>
 </html>
