--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       position: absolute;
     }
 
-    #files {
+    #cartridge {
       margin: 0 auto;
       display: block;
     }
@@ -50,7 +50,7 @@
         </div>
       </div>
 
-      <input type="file" id="files" name="file" tabindex="-1" />
+      <input type="file" id="cartridge" tabindex="-1" />
 
     </div>
 
