Write test and implementation for Window in LCD

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 
       <div id="dmg">
         <canvas id="bg" width="160" height="144"></canvas>
+        <canvas id="window" width="160" height="144"></canvas>
         <canvas id="obj" width="160" height="144"></canvas>
       </div>
 
