--- a/index.html
+++ b/index.html
@@ -19,12 +19,10 @@
       position: relative;
     }
 
-    #bg, #obj {
+    canvas {
       position: absolute;
       width: 480px;
       height: 432px;
-      image-rendering: -moz-crisp-edges;
-      image-rendering: -webkit-crisp-edges;
       image-rendering: pixelated;
     }
 
