--- a/index.html
+++ b/index.html
@@ -5,17 +5,20 @@
     <title>gb-ES6</title>
   </head>
   <style>
-    body {
-      margin: 0;
+    @import url('https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz');
+    @import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css');
+
+    * {
+      box-sizing: border-box;
     }
 
-    #app {
-      position: relative;
+    body {
+      font-family: 'Yanone Kaffeesatz', sans-serif;
+      margin: 10px;
     }
 
     #dmg {
       width: 480px;
-      margin: 0 auto;
       position: relative;
     }
 
@@ -26,16 +29,68 @@
       image-rendering: pixelated;
     }
 
-    #cartridge {
-      margin: 0 auto;
-      display: block;
+    #menu {
+      position: absolute;
+      left: 500px;
     }
+
+    .fileUpload {
+      position: relative;
+      overflow: hidden;
+      color: white;
+      background-color: rgb(85, 106, 33);
+      font-size: 1.25rem;
+      font-weight: 700;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      cursor: pointer;
+      display: inline-block;
+      padding: 0.625rem 1.25rem;
+    }
+
+    .fileUpload:hover {
+      background-color: #162d0e;
+    }
+
+    .fileUpload input.upload {
+      position: absolute;
+      top: 0;
+      right: 0;
+      margin: 0;
+      padding: 0;
+      font-size: 20px;
+      cursor: pointer;
+      opacity: 0;
+      filter: alpha(opacity=0);
+    }
+
+    #games {
+      list-style: none;
+      padding: 0;
+      font-size: 1.2em;
+    }
+
+    #games li {
+      cursor: pointer;
+      padding-left: 1.3em;
+    }
+
+    #games li:hover {
+      color: rgb(85, 106, 33);
+    }
+
+    #games li:before {
+      content: "\f016";
+      font-family: FontAwesome;
+      display: inline-block;
+      margin-left: -1.3em;
+      width: 1.3em;
+    }
+
   </style>
 
   <body>
     <div id="app">
-
-      <input type="file" id="cartridge" tabindex="-1" />
 
       <div id="dmg">
         <canvas id="bg" width="160" height="144"></canvas>
@@ -43,6 +98,25 @@
         <canvas id="obj" width="160" height="144"></canvas>
       </div>
 
+      <div id="menu">
+
+        <div class="fileUpload">
+          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 20 17">
+            <path fill="white" d="M10 0l-5.2 4.9h3.3v5.1h3.8v-5.1h3.3l-5.2-4.9zm9.3 11.5l-3.2-2.1h-2l3.4 2.6h-3.5c-.1 0-.2.1-.2.1l-.8 2.3h-6l-.8-2.2c-.1-.1-.1-.2-.2-.2h-3.6l3.4-2.6h-2l-3.2 2.1c-.4.3-.7 1-.6 1.5l.6 3.1c.1.5.7.9 1.2.9h16.3c.6 0 1.1-.4 1.3-.9l.6-3.1c.1-.5-.2-1.2-.7-1.5z">
+            </path>
+          </svg>
+          <span>Load game...</span>
+          <input id="cartridge" type="file" class="upload" />
+        </div>
+
+        <h2>Try a test game:</h2>
+        <ul id="games">
+          <li>fonts</li>
+          <li>colorbar</li>
+          <li>rand</li>
+        </ul>
+
+      </div>
     </div>
 
   </body>
