Tweak button colour

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     }
 
     .fileUpload:hover {
-      background-color: #162d0e;
+      background-color: rgb(124, 146, 37);
     }
 
     .fileUpload input.upload {
