--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       filter: alpha(opacity=0);
     }
 
-    #games {
+    ul {
       list-style: none;
       padding: 0;
       font-size: 1.2em;
@@ -85,6 +85,29 @@
       display: inline-block;
       margin-left: -1.3em;
       width: 1.3em;
+    }
+
+    #controls {
+      margin-top: 100px;
+    }
+
+    #controls kbd {
+      margin-left: 4px;
+    }
+
+    kbd {
+      display: inline-block;
+      margin: 0;
+      padding: .2em .6em;
+      font-size: 11px;
+      line-height: 1.4;
+      color: #242729;
+      text-shadow: 0 1px 0 #FFF;
+      background-color: #e1e3e5;
+      border: 1px solid #adb3b9;
+      border-radius: 3px;
+      box-shadow: 0 1px 0 rgba(12,13,14,0.2), 0 0 0 2px #FFF inset;
+      white-space: nowrap;
     }
 
   </style>
@@ -109,11 +132,19 @@
           <input id="cartridge" type="file" class="upload" />
         </div>
 
-        <h2>Try a test game:</h2>
+        <h2>Try a test game</h2>
         <ul id="games">
           <li>fonts</li>
           <li>colorbar</li>
           <li>rand</li>
+        </ul>
+
+        <ul id="controls">
+          <li>D-pad <kbd>&#8592;</kbd><kbd>&#8593;</kbd><kbd>&#8594;</kbd><kbd>&#8595;</kbd></li>
+          <li>A <kbd>X</kbd></li>
+          <li>B <kbd>Z</kbd></li>
+          <li>Start <kbd>Enter</kbd></li>
+          <li>Select <kbd>Ctrl</kbd></li>
         </ul>
 
       </div>
