Add blargg's cpu instruction tests and GBDK galaxy to front-end

--- a/index.html
+++ b/index.html
@@ -132,9 +132,11 @@
           <input id="cartridge" type="file" class="upload" />
         </div>
 
-        <h2>Try a test game</h2>
+        <h2>Or try a test rom</h2>
         <ul id="games">
+          <li>CPU instructions tests</li>
           <li>fonts</li>
+          <li>galaxy</li>
           <li>colorbar</li>
           <li>rand</li>
         </ul>
