Refactor: merge 3 canvases, dataImage and contexts into one

--- a/index.html
+++ b/index.html
@@ -116,9 +116,7 @@
     <div id="app">
 
       <div id="dmg">
-        <canvas id="bg" width="160" height="144"></canvas>
-        <canvas id="window" width="160" height="144"></canvas>
-        <canvas id="obj" width="160" height="144"></canvas>
+        <canvas id="screen" width="160" height="144"></canvas>
       </div>
 
       <div id="menu">
