Add HTML title and meta

--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>ESBoy - Free Web Game Boy Color emulator</title>
     <meta charset="utf-8">
-    <title>gb-ES6</title>
+    <meta name="description" content="ESBoy - Free Web Game Boy Color emulator">
+    <meta name="keywords" content="gameboy,gb,emulator,retro,consoles,handheld">
+    <meta name="author" content="Luc Rubio">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <style>
     @import url('https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz');
