Improve conversion rgb15 to rgba32

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       width: 480px;
       height: 432px;
       image-rendering: pixelated;
+      box-shadow: 1px 1px 2px #ccc;
     }
 
     #menu {
