Rebrand to ESboy

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ESBoy - Free Web Game Boy Color emulator</title>
+    <title>ESboy</title>
     <meta charset="utf-8">
-    <meta name="description" content="ESBoy - Free Web Game Boy Color emulator">
+    <meta name="description" content="ESboy - Free Web Game Boy Color emulator">
     <meta name="keywords" content="gameboy,gb,emulator,retro,consoles,handheld">
     <meta name="author" content="Luc Rubio">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -48,7 +48,7 @@
     </footer>
 
   </body>
-  <script src="gb-ES6.js"></script>
+  <script src="esboy.js"></script>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
               (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
