Group web files into subdirectory and remove doc

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="gameboy,gb,emulator,retro,consoles,handheld">
     <meta name="author" content="Luc Rubio">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css"/>
+    <link rel="stylesheet" href="src/web/css/style.css"/>
     <script async defer src="https://buttons.github.io/buttons.js"></script>
   </head>
 
@@ -16,7 +16,7 @@
       <ul>
         <li><a class="title">ESboy</a></li>
         <li class="fileUpload">
-          <a href="#"><i class="icon folder"></i> LOAD GAME</a>
+          <a><i class="icon folder"></i> LOAD GAME</a>
           <input id="cartridge" type="file" class="upload" />
         </li>
         <!--<li><a href="#"><i class="fa fa-info-circle" aria-hidden="true"></i>About</a></li>-->
