--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="author" content="Luc Rubio">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="src/web/css/style.css"/>
+    <link rel='shortcut icon' type='image/x-icon' href='src/web/img/favicon.ico'/>
     <script async defer src="https://buttons.github.io/buttons.js"></script>
   </head>
 
